force-app/main/default/objects/SBQQ__Quote__c/fields/Freight_Info_Account__c.field-meta.xml
<CustomField>
    <fullName>Freight_Info_Account__c</fullName>
    <label>Freight Info/Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>