force-app/main/default/objects/SBQQ__Quote__c/fields/Freight_Info_Phone__c.field-meta.xml
<CustomField>
    <fullName>Freight_Info_Phone__c</fullName>
    <label>Freight Info/Phone</label>
    <type>Phone</type>
</CustomField>