force-app/main/default/objects/SBQQ__Quote__c/fields/Freight_Info_Shipping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Freight_Info_Shipping_Notes__c</fullName>
    <label>Freight Info/Shipping Notes</label>
    <type>TextArea</type>
</CustomField>