force-app/main/default/objects/SBQQ__Quote__c/fields/Freight_Information__c.field-meta.xml
<CustomField>
    <fullName>Freight_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freight Information</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Freight_Information__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Freight_Information__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Shipping_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Freight_Information__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>