force-app/main/default/objects/SBQQ__Quote__c/fields/Historical_Only__c.field-meta.xml
<CustomField>
    <fullName>Historical_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Only</label>
    <type>Checkbox</type>
</CustomField>