force-app/main/default/objects/SBQQ__Quote__c/fields/IFS_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>IFS_Order_Status__c</fullName>
    <defaultValue>&quot;Not Submitted&quot;</defaultValue>
    <label>IFS Order Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>