force-app/main/default/objects/SBQQ__Quote__c/fields/Inside_Sales_Approver_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Approver_E_mail__c</fullName>
    <description>Only for use with E-mail alert.</description>
    <label>Inside Sales Approver E-mail</label>
    <type>Email</type>
</CustomField>