force-app/main/default/objects/SBQQ__Quote__c/fields/Invalid_Quote_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Quote_Line_Item_Count__c</fullName>
    <label>Invalid Quote Line Item Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Is_Expired__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>