force-app/main/default/objects/SBQQ__Quote__c/fields/Lead_Time_Max__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Max__c</fullName>
    <label>Lead Time (Max)</label>
    <summarizedField>SBQQ__QuoteLine__c.Max_Lead_Time__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>