force-app/main/default/objects/SBQQ__Quote__c/fields/Max_Lead_Time_in_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Max_Lead_Time_in_Weeks__c</fullName>
    <formula>If(Lead_Time_Max__c &gt; 15, 
(Text(FLOOR(Lead_Time_Max__c/5)) &amp; &quot; Weeks &amp; &quot; &amp; Text((Lead_Time_Max__c/5 - FLOOR(Lead_Time_Max__c/5))*5) &amp; &quot; Day(s)&quot;),
(Text(Lead_Time_Max__c) &amp; &quot; Day(s)&quot;)
)</formula>
    <label>Max Lead Time (in Weeks)</label>
    <type>Text</type>
</CustomField>