force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>TEXT( Sales_Division__c )&amp;RIGHT(Quote_Number__c,LEN(Quote_Number__c)-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>