force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Priority2__c.field-meta.xml
<CustomField>
    <fullName>Order_Priority2__c</fullName>
    <description>This Field is to help identify which departments need to look into this order once it is in IFS</description>
    <inlineHelpText>This Field is to help identify which departments need to look into this order once it is in IFS</inlineHelpText>
    <label>Order Priority*</label>
    <length>9</length>
    <type>Text</type>
</CustomField>