force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Priority__c.field-meta.xml
<CustomField>
    <fullName>Order_Priority__c</fullName>
    <description>Priority for order.  01 = Redball orders</description>
    <inlineHelpText>Priority for order is 01 for Red ball orders (IFS field)</inlineHelpText>
    <label>Order Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Red-ball</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>