force-app/main/default/objects/SBQQ__Quote__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Type of order based on CDC requirements.  Type of order triggers different approvals/validations in Salesforce and IFS.</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand_Order_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Order_Types</valueSetName>
    </valueSet>
</CustomField>