force-app/main/default/objects/SBQQ__Quote__c/fields/Ordering_District__c.field-meta.xml
<CustomField>
    <fullName>Ordering_District__c</fullName>
    <label>Ordering District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Districts</valueSetName>
    </valueSet>
</CustomField>