force-app/main/default/objects/SBQQ__Quote__c/fields/Ordering_Region__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Region__c</fullName>
    <label>Ordering Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regions</valueSetName>
    </valueSet>
</CustomField>