force-app/main/default/objects/SBQQ__Quote__c/fields/Partner_Rep_Error_Occured__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Error_Occured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to allow CDC employees to identify if a Partner user made a mistake on the Qutoe</description>
    <label>Partner Rep Error Occured</label>
    <type>Checkbox</type>
</CustomField>