force-app/main/default/objects/SBQQ__Quote__c/fields/Pending_Engineering_Review_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Engineering_Review_Count__c</fullName>
    <label>Pending Engineering Review Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Engineering_Status__c</field>
        <operation>equals</operation>
        <value>Requires Approval</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Primary, Alternate</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>