force-app/main/default/objects/SBQQ__Quote__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>IF( Wanted_Delivery_Date__c  &lt; Standard_Delivery_Date__c , &apos;01&apos;, &apos;00&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>