force-app/main/default/objects/SBQQ__Quote__c/fields/Production_Planning_Approver__c.field-meta.xml
<CustomField>
    <fullName>Production_Planning_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Planning Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuotesI0xY</relationshipName>
    <type>Lookup</type>
</CustomField>