force-app/main/default/objects/SBQQ__Quote__c/fields/Project_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Project_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Approval Required</label>
    <type>Checkbox</type>
</CustomField>