force-app/main/default/objects/SBQQ__Quote__c/fields/Project_Classification__c.field-meta.xml
<CustomField>
    <fullName>Project_Classification__c</fullName>
    <formula>Text(SBQQ__Opportunity2__r.Is_it_a_Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Classification</label>
    <type>Text</type>
</CustomField>