force-app/main/default/objects/SBQQ__Quote__c/fields/Proposal_Sections__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Sections__c</fullName>
    <label>Proposal Sections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cover Letter</fullName>
            </value>
            <value>
                <fullName>Product Size/Capacity Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>