force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Original Quote Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>