force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Quote_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>