force-app/main/default/objects/SBQQ__Quote__c/fields/QuoteNumberWithRevision__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumberWithRevision__c</fullName>
    <formula>Quote_Number__c &amp; &apos;, Revision: &apos;&amp; TEXT(Revision__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number with Revision #</label>
    <type>Text</type>
</CustomField>