force-app/main/default/objects/SBQQ__Quote__c/fields/Reference_Secondary_Contact1__c.field-meta.xml
<CustomField>
    <fullName>Reference_Secondary_Contact1__c</fullName>
    <formula>SBQQ__Opportunity2__r.Reference_Secondary_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This value is set on Opportunity. To Change, go back to Opportunity.</inlineHelpText>
    <label>Reference Secondary Contact</label>
    <type>Text</type>
</CustomField>