force-app/main/default/objects/SBQQ__Quote__c/fields/Rep_Code_Region__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code_Region__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.PartnerAccount.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region*</label>
    <type>Text</type>
</CustomField>