force-app/main/default/objects/SBQQ__Quote__c/fields/Revision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Revision_Reason__c</fullName>
    <label>Revision Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>