force-app/main/default/objects/SBQQ__Quote__c/fields/Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>Sales_Division__c</fullName>
    <label>Selling Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Selling_Entities</valueSetName>
    </valueSet>
</CustomField>