force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact for the quote. This person&apos;s name will appear on generated quote document.</description>
    <inlineHelpText>Primary contact for the quote. This person&apos;s name will appear on generated quote document. The e-mail address of this person will be sent the Order Acknowledgement if the Quote is ordered.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>