force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__QuoteLanguage__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__QuoteLanguage__c</fullName>
    <description>Language used for this Quote when mass generating Quote Documents</description>
    <inlineHelpText>Language used for this Quote when mass generating Quote Documents</inlineHelpText>
    <label>Quote Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(da) Danish</fullName>
            </value>
            <value>
                <fullName>(de) German</fullName>
            </value>
            <value>
                <fullName>(en) English</fullName>
                <default>true</default>
                <label>(en) English</label>
            </value>
            <value>
                <fullName>(es) Spanish</fullName>
            </value>
            <value>
                <fullName>(fr) French</fullName>
            </value>
            <value>
                <fullName>(it) Italian</fullName>
            </value>
            <value>
                <fullName>(nl) Dutch</fullName>
            </value>
            <value>
                <fullName>(pt) Portuguese</fullName>
            </value>
            <value>
                <fullName>(ru) Russian</fullName>
            </value>
            <value>
                <fullName>(bg) Bulgarian</fullName>
            </value>
            <value>
                <fullName>(zh) Chinese</fullName>
            </value>
            <value>
                <fullName>(hr) Croatian</fullName>
            </value>
            <value>
                <fullName>(cs) Czech</fullName>
            </value>
            <value>
                <fullName>(et) Estonian</fullName>
            </value>
            <value>
                <fullName>(fi) Finnish</fullName>
            </value>
            <value>
                <fullName>(el) Greek</fullName>
            </value>
            <value>
                <fullName>(hu) Hungarian</fullName>
            </value>
            <value>
                <fullName>(lv) Latvian</fullName>
            </value>
            <value>
                <fullName>(lt) Lithuanian</fullName>
            </value>
            <value>
                <fullName>(mt) Maltese</fullName>
            </value>
            <value>
                <fullName>(pl) Polish</fullName>
            </value>
            <value>
                <fullName>(ro) Romanian</fullName>
            </value>
            <value>
                <fullName>(sk) Slovak</fullName>
            </value>
            <value>
                <fullName>(sl) Slovenian</fullName>
            </value>
            <value>
                <fullName>(sv) Swedish</fullName>
            </value>
            <value>
                <fullName>(tr) Turkish</fullName>
            </value>
            <value>
                <fullName>Chinese (Simplified)</fullName>
            </value>
            <value>
                <fullName>Chinese (Traditional)</fullName>
                <isActive>false</isActive>
                <label>Chinese (Traditional)</label>
            </value>
            <value>
                <fullName>Danish</fullName>
                <isActive>false</isActive>
                <label>Danish</label>
            </value>
            <value>
                <fullName>Dutch</fullName>
                <isActive>false</isActive>
                <label>Dutch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>