force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales rep responsible for this quote if different from the user who owns the quote record.</description>
    <inlineHelpText>Sales rep responsible for this quote if different from the user who owns the quote record. Replaces &quot;Sold By Rep&quot;</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>