force-app/main/default/objects/SBQQ__Quote__c/fields/Selling_Entity_User__c.field-meta.xml
<CustomField>
    <fullName>Selling_Entity_User__c</fullName>
    <formula>TEXT(Owner:User.Sales_Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling Entity (User)</label>
    <type>Text</type>
</CustomField>