force-app/main/default/objects/SBQQ__Quote__c/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <label>Ship Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>247</fullName>
                <label>24/7 Delivery SERVICE</label>
            </value>
            <value>
                <fullName>ABX LOGISTICS</fullName>
                <isActive>false</isActive>
                <label>ABX LOGISTICS</label>
            </value>
            <value>
                <fullName>ADL</fullName>
                <label>ADITYA LOGISTICS (DOMESTIC FOR GCMPL)</label>
            </value>
            <value>
                <fullName>AEI</fullName>
                <isActive>false</isActive>
                <label>AEI</label>
            </value>
            <value>
                <fullName>AIR PARCEL POST</fullName>
                <isActive>false</isActive>
                <label>AIR PARCEL POST</label>
            </value>
            <value>
                <fullName>AMERICAN CARGO</fullName>
                <isActive>false</isActive>
                <label>AMERICAN CARGO</label>
            </value>
            <value>
                <fullName>AFW</fullName>
                <label>AMERICAN FREIGHTWAYS</label>
            </value>
            <value>
                <fullName>AMERICAN FRT-MTR FRT</fullName>
                <isActive>false</isActive>
                <label>AMERICAN FRT-MTR FRT</label>
            </value>
            <value>
                <fullName>ARC</fullName>
                <label>ARC TRANSPORT (DOMESTIC FOR GCMPL)</label>
            </value>
            <value>
                <fullName>AVERITT EXPRESS</fullName>
                <isActive>false</isActive>
                <label>AVERITT EXPRESS</label>
            </value>
            <value>
                <fullName>BAX</fullName>
                <isActive>false</isActive>
                <label>BAX</label>
            </value>
            <value>
                <fullName>BAX INTERNATIONAL</fullName>
                <isActive>false</isActive>
                <label>BAX INTERNATIONAL</label>
            </value>
            <value>
                <fullName>BAX OVERNITE</fullName>
                <isActive>false</isActive>
                <label>BAX OVERNITE</label>
            </value>
            <value>
                <fullName>BELLAIR</fullName>
                <isActive>false</isActive>
                <label>BELLAIR</label>
            </value>
            <value>
                <fullName>BELLAIR DOOR TO DOOR</fullName>
                <isActive>false</isActive>
                <label>BELLAIR DOOR TO DOOR</label>
            </value>
            <value>
                <fullName>BEL</fullName>
                <label>BELLAIRE</label>
            </value>
            <value>
                <fullName>BEST WAY</fullName>
                <isActive>false</isActive>
                <label>BEST WAY</label>
            </value>
            <value>
                <fullName>BEST WAY COLLECT</fullName>
                <isActive>false</isActive>
                <label>BEST WAY COLLECT</label>
            </value>
            <value>
                <fullName>BEST WAY PREPAID</fullName>
                <isActive>false</isActive>
                <label>BEST WAY PREPAID</label>
            </value>
            <value>
                <fullName>BWY</fullName>
                <label>BEST WAY PREPAID AND ADD</label>
            </value>
            <value>
                <fullName>CAP AIR</fullName>
                <isActive>false</isActive>
                <label>CAP AIR</label>
            </value>
            <value>
                <fullName>CCX-MTR FRT</fullName>
                <isActive>false</isActive>
                <label>CCX-MTR FRT</label>
            </value>
            <value>
                <fullName>CHE</fullName>
                <label>CHEETAH</label>
            </value>
            <value>
                <fullName>CIRCLE AIR FREIGHT</fullName>
                <isActive>false</isActive>
                <label>CIRCLE AIR FREIGHT</label>
            </value>
            <value>
                <fullName>CMS</fullName>
                <label>COMET SEA SHIPMENT FREIGHT</label>
            </value>
            <value>
                <fullName>CONCORDIA</fullName>
                <isActive>false</isActive>
                <label>CONCORDIA</label>
            </value>
            <value>
                <fullName>CONCORDIA FREIGHT</fullName>
                <isActive>false</isActive>
                <label>CONCORDIA FREIGHT</label>
            </value>
            <value>
                <fullName>CONWAY</fullName>
                <isActive>false</isActive>
                <label>CONWAY</label>
            </value>
            <value>
                <fullName>CTS</fullName>
                <label>CTS GROUP FREIGHT</label>
            </value>
            <value>
                <fullName>CPU</fullName>
                <label>CUSTOMER&apos;S SHIPPING AGENT PICK UP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>