force-app/main/default/objects/SBQQ__Quote__c/fields/Shipment_Creation__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Creation__c</fullName>
    <label>Shipment Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Pick List Creation</fullName>
            </value>
            <value>
                <fullName>Not Automatic</fullName>
            </value>
            <value>
                <fullName>At Order Release</fullName>
                <isActive>false</isActive>
                <label>At Order Release</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>