force-app/main/default/objects/SBQQ__Quote__c/fields/Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Type__c</fullName>
    <label>Shipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NP</fullName>
                <label>Create New Shipment at Pick List Creation</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Customer approval required before shipment</label>
            </value>
            <value>
                <fullName>DNS</fullName>
                <label>Do not ship before specific date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>